tests/udn_test_1/blue_ns_udn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: k8s.ovn.org/v1
kind: UserDefinedNetwork
metadata:
  name: separate-namespace
  namespace: blue
spec:
  topology: Layer2
  layer2:
    role: Primary
    subnets:
      - 192.168.0.0/16
    ipam:
      lifecycle: Persistent
