test_outputs/connlist/udn_test_1_connlist_output.txt

blue[udn]:
0.0.0.0-255.255.255.255[External] => blue[udn]/webserver[Pod] : All Connections
blue[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections

green[udn]:
0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod] : All Connections
green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
